tests/errors/test_102.x
// Generic funciton imported into namespace already exists

using "foo.x";

fn id<G>(v: G) -> G {
	return v;
}

fn main() -> void {}
